[metadata]
name = cronwatch
version = 0.1.0
description = A lightweight CLI monitor that alerts on missed or failing cron jobs.
author = cronwatch contributors
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml>=6.0
    requests>=2.28

[options.entry_points]
console_scripts =
    cronwatch = cronwatch.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
